# awiros-dev

./: README.md
awiros-apps/: CMakeLists.txt  awiros  configure  package-lock.json  package.json  test.cpp
awiros-apps/apps/: CMakeLists.txt  app-registry.txt
awiros-apps/apps/crowd_count/: crowd_count.cpp  crowd_count.h
awiros-apps/apps/simple_camera/: simple_camera.cpp  simple_camera.h
awiros-apps/cmake/: cuda.cmake  curl.cmake  darknet.cmake  faiss.cmake  mxnet.cmake  tensorRT.cmake  tf.cmake
awiros-apps/model/common/: coco.data
awiros-apps/node/: acs.json  ads.json  ads_schema.json  ads_schema_base.json  demo_acs_training_app.json  index.js  myacs_new.json  new_acs_local.json  new_acs_local1.json  new_updated_acs.json  tamp.js  test.js  testfrs.js  train_acs.json
awiros-apps/scripts/: app_boilerplate.py  default_app.cpp  default_app.h  utils.py
engyn-build/include/: engyn.h
engyn-build/include/core/: annotator.h  app.h  auth.h  blob.h  camera.h  cascade.h  classifiers.h  consts.h  conversion_layer.h  detector.h  event.h  ext_api.h  filter.h  frame.h  handle_acs.h  hungarian.h  kalman.h  motion.h  resource_manage.h  star.h  term.h  tracker.h  triggers.h  types.h  utils.h
engyn-build/include/ext/darknet/include/: darknet.h
engyn-build/include/ext/darknet/include/darknet/: awiros_drivers.h
engyn-build/include/ext/json/: json-schema-draft4.json.cpp  json-schema.hpp  json-validator.cpp  json.hpp
engyn-build/include/ext/mjpeg-streamer/: MJPEGWriter.cpp  MJPEGWriter.h  MJPEGWriter.h-backup
engyn-build/include/ext/utils/: base64.h  validator.h
engyn-build/include/interfaces/frameworks/darknet/: dnet.h
engyn-build/include/interfaces/frameworks/faiss/: clustering.h
engyn-build/include/interfaces/frameworks/tensorflow/: tf_utils.h
engyn-build/include/interfaces/nan/: awiros_nan.h  types.h
engyn-build/include/interfaces/webstreamer/: webstream.h
